--- a/HTMLfiles/Homepage.html
+++ b/HTMLfiles/Homepage.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="../js/slider.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Homepage</title>
 </head>
 
@@ -19,11 +20,11 @@
             "  />
     
             <div class="header-right">
-                    <a href="../HTMLfiles/AdminDashboard.php">Dashboard</a>
-                <a class="active" href="../HTMLfiles/Homepage.php">Home</a>
-                <a href="../HTMLfiles/About us.php">About Us</a>
-                    <a href="../HTMLfiles/ContactForm.php">Contact Form</a>
-                    <a href="../backend/logout.php">Log out</a>
+                    <a href="#">Dashboard</a>
+                <a class="active" href="Homepage.html">Home</a>
+                <a href="#">About Us</a>
+                    <a href="#">Contact Form</a>
+                    <a href="#">Log out</a>
             </div>
         </div>
     </header>
